--- a/src/index.pug
+++ b/src/index.pug
@@ -9,17 +9,17 @@ html
       input#item1(type="checkbox")
       input#item2(type="checkbox")
 
-      .shop
+      #shop
         div 商店
         .items
           .item1
-            span Special Cookie 1：5枚
+            span
             button
-              span
+              span 購入
               label(for="item1")
           .item2
-            span Special Cookie 2：10枚
+            span
             button
-              span
+              span 購入
               label(for="item2")
     .result
