--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,10 @@ body {
   background-color: #cccccc;
 }
 
+.result::after {
+  content: "クッキー：" counter(cookies) "枚";
+}
+
 .cookie {
   width: 100px;
   height: 100px;
@@ -14,120 +18,108 @@ body {
   position: relative;
   background-color: chocolate;
   counter-reset: cookies 0;
-}
-.cookie > input.increment {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  inset: 0;
-  left: var(--left);
-  margin: 0;
-  border: none;
-  border-radius: 50%;
-  cursor: pointer;
-  appearance: none;
-}
-.cookie > input.increment:first-child {
-  left: 0;
-}
-.cookie > input.increment:checked {
-  left: var(--left);
-}
-.cookie > input.increment:checked + input.increment:not(:checked) {
-  left: 0;
-}
-.cookie > input.increment:checked + input.increment:not(:checked) + input.increment:not(:checked) {
-  left: var(--left);
-}
-.cookie > input.increment:checked {
-  counter-increment: cookies 1;
+  > input {
+    margin: 0;
+    position: absolute;
+    left: var(--left);
+    appearance: none;
+    border: none;
+  }
+  > input.increment {
+    width: 100%;
+    height: 100%;
+    inset: 0;
+    border-radius: 50%;
+    cursor: pointer;
+    &:first-child {
+      left: 0;
+    }
+    &:checked {
+      counter-increment: cookies 1;
+      left: var(--left);
+      + input.increment:not(:checked) {
+        left: 0;
+        + input.increment:not(:checked) {
+          left: var(--left);
+        }
+      }
+    }
+  }
 }
 
-.shop {
+#shop {
   position: absolute;
   top: 0;
   left: 200px;
   width: 200px;
   border: 1px dotted black;
   padding: 10px;
-}
-.shop > .items {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-.shop > .items > div > input {
-  position: absolute;
-  left: var(--left);
-  appearance: none;
-}
-.shop > .items > div > button {
-  width: 100%;
-  background-color: gray;
-  cursor: not-allowed;
-  border: none;
-  padding: 0;
-  position: relative;
-  height: 30px;
-}
-.shop > .items > div > button > label {
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: var(--left);
-  cursor: pointer;
-}
-.shop > .items > div > button > span::after {
-  content: "購入";
-}
-.shop > .items > div > input:checked + button > span::after {
-  content: "購入済み";
-}
-.shop > .items > div > input:checked + button > label {
-  left: var(--left) !important;
+  > .items {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    > div {
+      > input {
+        position: absolute;
+        left: var(--left);
+        appearance: none;
+      }
+      > button {
+        width: 100%;
+        background-color: gray;
+        cursor: not-allowed;
+        border: none;
+        padding: 0;
+        position: relative;
+        height: 30px;
+        > label {
+          display: block;
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: var(--left);
+          cursor: pointer;
+        }
+      }
+    }
+  }
 }
 
-.result::after {
-  content: "クッキー：" counter(cookies) "枚";
+@mixin shop-item($index, $item-name, $price) {
+  #shop > .items > .item#{$index} > span::after {
+    content: $item-name + "：" + $price + "枚"
+  }
+
+  $selector: ".cookie > ";
+  @for $i from 1 through $price {
+    @if $i < $price {
+      $selector: $selector + "input.increment:checked + ";
+    } @else {
+      $selector: $selector + "input.increment:checked ~";
+    }
+  }
+  #{$selector} #shop > .items > .item#{$index} > button {
+    background-color: skyblue;
+    > label {
+      left: 0;
+    }
+  }
+  #item#{$index}:checked {
+    counter-increment: cookies -#{$price};
+    ~ #shop > .items > .item#{$index} {
+      > button {
+        > span::after {
+          content: "済み";
+        }
+        > label {
+          left: var(--left);
+        }
+      }
+    }
+  }
 }
 
-/* item1: price 5 */
-.cookie >
-  input.increment:checked + input.increment:checked + input.increment:checked +
-  input.increment:checked + input.increment:checked ~
-  .shop > .items > .item1 > button > label {
-  left: 0;
-}
-.cookie >
-  input.increment:checked + input.increment:checked + input.increment:checked +
-  input.increment:checked + input.increment:checked ~
-  .shop > .items > .item1 > button {
-  background-color: skyblue;
-}
-#item1:checked {
-  counter-increment: cookies -5;
-}
-
-/* item2: price 10 */
-.cookie >
-  input.increment:checked + input.increment:checked + input.increment:checked +
-  input.increment:checked + input.increment:checked + input.increment:checked +
-  input.increment:checked + input.increment:checked + input.increment:checked +
-  input.increment:checked ~
-  .shop > .items > .item2 > button > label {
-  left: 0;
-}
-.cookie >
-  input.increment:checked + input.increment:checked + input.increment:checked +
-  input.increment:checked + input.increment:checked + input.increment:checked +
-  input.increment:checked + input.increment:checked + input.increment:checked +
-  input.increment:checked ~
-  .shop > .items > .item2 > button {
-  background-color: skyblue;
-}
-#item2:checked {
-  counter-increment: cookies -10;
-}
+@include shop-item(1, "Special Cookie 1", 5);
+@include shop-item(2, "Special Cookie 2", 10);
