--- a/src/index.pug
+++ b/src/index.pug
@@ -3,11 +3,13 @@ html
     link(rel="stylesheet", href="./style.css")
   body
     .cookie
-      each _ in Array(30)
+      each _ in Array(100)
         input.increment(type="checkbox")
 
       input#item1(type="checkbox")
       input#item2(type="checkbox")
+      input#item3(type="checkbox")
+      input#item4(type="checkbox")
 
       #shop
         div 商店
@@ -22,4 +24,14 @@ html
             button
               span 購入
               label(for="item2")
+          .item3
+            span
+            button
+              span 購入
+              label(for="item3")
+          .item4
+            span
+            button
+              span 購入
+              label(for="item4")
     .result
