Add cookie char

--- a/src/index.pug
+++ b/src/index.pug
@@ -3,6 +3,7 @@ html
     link(rel="stylesheet", href="./style.css")
   body
     .cookie
+      span.icon 🍪
       each _ in Array(100)
         input.increment(type="checkbox")
 
