--- a/docs/style.css
+++ b/docs/style.css
@@ -14,11 +14,14 @@ body {
 .cookie {
   width: 100px;
   height: 100px;
-  border: 1px solid black;
   border-radius: 50px;
   position: relative;
-  background-color: chocolate;
   counter-reset: cookies 0;
+  display: flex;
+}
+.cookie .icon {
+  align-self: center;
+  font-size: 100px;
 }
 .cookie > input {
   margin: 0;
