--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,7 @@
 
 :root {
   --left: 500px;
+  --cookie-size: 200px;
 }
 
 body {
@@ -13,16 +14,17 @@ body {
 }
 
 .cookie {
-  width: 100px;
-  height: 100px;
-  border-radius: 50px;
+  width: var(--cookie-size);
+  height: var(--cooike-size);
+  border-radius: 50%;
   position: relative;
   counter-reset: cookies 0;
   display: flex;
 
   .icon {
     align-self: center;
-    font-size: 100px;
+    font-size: var(--cookie-size);
+    line-height: var(--cookie-size);
     width: 100%;
     height: 100%;
   }
