--- a/docs/style.css
+++ b/docs/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 :root {
   --left: 500px;
+  --cookie-size: 200px;
 }
 
 body {
@@ -12,16 +13,18 @@ body {
 }
 
 .cookie {
-  width: 100px;
-  height: 100px;
-  border-radius: 50px;
+  width: 500px;
+  width: var(--cookie-size);
+  height: var(--cooike-size);
+  border-radius: 50%;
   position: relative;
   counter-reset: cookies 0;
   display: flex;
 }
 .cookie .icon {
   align-self: center;
-  font-size: 100px;
+  font-size: var(--cookie-size);
+  line-height: var(--cookie-size);
   width: 100%;
   height: 100%;
 }
