--- a/src/index.pug
+++ b/src/index.pug
@@ -2,8 +2,8 @@ html
   header
     link(rel="stylesheet", href="./style.css")
   body
-    .cookie
-      span.icon 🍪
+    .main
+      span.cookie 🍪
       each _ in Array(100)
         input.increment(type="checkbox")
 
