--- a/docs/style.css
+++ b/docs/style.css
@@ -12,47 +12,43 @@ body {
   content: "クッキー：" counter(cookies) "枚";
 }
 
-.cookie {
-  width: 500px;
-  width: var(--cookie-size);
-  height: var(--cooike-size);
-  border-radius: 50%;
+.main {
   position: relative;
   counter-reset: cookies 0;
   display: flex;
 }
-.cookie .icon {
+.main .icon {
   align-self: center;
   font-size: var(--cookie-size);
   line-height: var(--cookie-size);
   width: 100%;
   height: 100%;
 }
-.cookie > input {
+.main > input {
   margin: 0;
   position: absolute;
   left: var(--left);
   appearance: none;
   border: none;
 }
-.cookie > input.increment {
-  width: 100%;
-  height: 100%;
+.main > input.increment {
+  width: var(--cookie-size);
+  height: var(--cookie-size);
   inset: 0;
   border-radius: 50%;
   cursor: pointer;
 }
-.cookie > input.increment:first-child {
+.main > input.increment:first-child {
   left: 0;
 }
-.cookie > input.increment:checked {
+.main > input.increment:checked {
   counter-increment: cookies 1;
   left: var(--left);
 }
-.cookie > input.increment:checked + input.increment:not(:checked) {
+.main > input.increment:checked + input.increment:not(:checked) {
   left: 0;
 }
-.cookie > input.increment:checked + input.increment:not(:checked) + input.increment:not(:checked) {
+.main > input.increment:checked + input.increment:not(:checked) + input.increment:not(:checked) {
   left: var(--left);
 }
 
