--- a/docs/style.css
+++ b/docs/style.css
@@ -12,50 +12,49 @@ body {
   content: "クッキー：" counter(cookies) "枚";
 }
 
-.main {
+#main {
   position: relative;
   counter-reset: cookies 0;
+  width: fit-content;
   display: flex;
+  margin: auto;
 }
-.main .icon {
+#main #cookie {
   align-self: center;
   font-size: var(--cookie-size);
   line-height: var(--cookie-size);
   width: 100%;
   height: 100%;
 }
-.main > input {
+#main > input {
   margin: 0;
   position: absolute;
   left: var(--left);
   appearance: none;
   border: none;
 }
-.main > input.increment {
+#main > input.increment {
   width: var(--cookie-size);
   height: var(--cookie-size);
   inset: 0;
   border-radius: 50%;
   cursor: pointer;
 }
-.main > input.increment:first-child {
+#main > input.increment:first-child {
   left: 0;
 }
-.main > input.increment:checked {
+#main > input.increment:checked {
   counter-increment: cookies 1;
   left: var(--left);
 }
-.main > input.increment:checked + input.increment:not(:checked) {
+#main > input.increment:checked + input.increment:not(:checked) {
   left: 0;
 }
-.main > input.increment:checked + input.increment:not(:checked) + input.increment:not(:checked) {
+#main > input.increment:checked + input.increment:not(:checked) + input.increment:not(:checked) {
   left: var(--left);
 }
 
 #shop {
-  position: absolute;
-  top: 0;
-  left: 200px;
   width: 200px;
   border: 1px dotted black;
   padding: 10px;
