--- a/src/index.pug
+++ b/src/index.pug
@@ -1,5 +1,5 @@
 html
-  header
+  head
     link(rel="stylesheet", href="./style.css")
   body
     #main
@@ -13,7 +13,7 @@ html
         input(id="item" + (index + 1) type="checkbox")
 
       #shop
-        div 商店
+        div ショップ
         .items
           each _, index in Array(item_number)
             div(class="item" + (index + 1))
