--- a/docs/style.css
+++ b/docs/style.css
@@ -4,6 +4,16 @@ body {
   background-color: #cccccc;
 }
 
+h1 {
+  text-align: center;
+}
+
+.result {
+  font-size: 24px;
+  width: 400px;
+  margin: auto;
+}
+
 .result::after {
   content: "クッキー：" counter(cookies) "枚";
 }
@@ -87,11 +97,6 @@ input:checked {
   top: 0;
   left: 500px;
   cursor: pointer;
-}
-
-.result {
-  width: 400px;
-  margin: auto;
 }
 
 #shop > .items > .item1 > span::after {
