--- a/src/index.pug
+++ b/src/index.pug
@@ -2,6 +2,7 @@ html
   head
     link(rel="stylesheet", href="./style.css")
   body
+    h1 CSS Cookie Clicker
     #main
       span#cookie 🍪
       each _ in Array(100)
